# AgentMesh

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  PHASE10_GUIDE.md  README.md  SHOWCASE.md  conftest.py  demo.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
agents/: __init__.py  code_agent.py  data_agent.py  research_agent.py  utils.py  web_search_agent.py  writer_agent.py
benchmark_results/: BENCHMARK_REPORT.md
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
dashboard/src/: App.tsx  index.css  types.ts
dashboard/src/components/: AgentCard.tsx  CommandPalette.tsx  JsonTree.tsx  MemoryPanel.tsx  MeshGraph.tsx  TaskWaterfall.tsx  TraceTimeline.tsx
dashboard/src/hooks/: useAgents.ts  useDashboardSocket.ts  useStats.ts
data/: startups.csv
examples/: hello_agent.py  translation_agent.py  two_agent_pipeline.py
mesh/: __init__.py  cli.py  db.py  evaluator.py  mcp_client.py  memory.py  models.py  registry.py  router.py
mesh/migrations/: 001_agents.sql  002_tasks.sql  003_trust.sql  004_traces.sql
sdk/: __init__.py  agent.py
tests/: __init__.py  test_auth.py  test_circuit_breaker.py  test_code_agent.py  test_data_agent.py  test_e2e.py  test_evaluator.py  test_latency.py  test_mcp_client.py  test_memory.py  test_models.py  test_negotiation.py  test_registry.py  test_router.py  test_trust.py
